Intentando arreglar el problema de la barra de tareas sin icono inicial